--- a/README.adoc
+++ b/README.adoc
@@ -23,9 +23,10 @@ Use packages from your Linux distribution, or:
 pip install dashing
 ----
 
-=== Example
 
-Also see demo.py
+=== Usage
+
+See the documentation at https://dashing.readthedocs.io/en/latest/
 
 .Usage
 [source,python]
