--- a/README.adoc
+++ b/README.adoc
@@ -3,6 +3,7 @@ image:https://img.shields.io/badge/status-alpha-orange.svg[badge]
 image:https://img.shields.io/badge/version-0.1.0-orange.svg[badge]
 image:https://img.shields.io/pypi/v/dashing.svg?style=plastic["Latest Version", link="https://pypi.python.org/pypi/dashing"]
 image:https://img.shields.io/badge/License-LGPL%20v3-blue.svg[License]
+image:https://api.reuse.software/badge/github.com/FedericoCeratto/dashing[REUSE,link="https://api.reuse.software/info/github.com/FedericoCeratto/dashing"]
 
 Dashing is a library to quickly create terminal-based dashboards in Python.
 
