--- a/README.adoc
+++ b/README.adoc
@@ -11,6 +11,14 @@ image:https://raw.githubusercontent.com/FedericoCeratto/dashing/gh-pages/tty.gif
 
 Similar libraries for other languages: https://github.com/gizak/termui[termui] https://github.com/chjj/blessed[blessed] https://github.com/yaronn/blessed-contrib[blessed-contrib]
 
+Features:
+- [x] Sub-character resolution (partially filled blocks)
+- [x] Horizontal and vertical bars with gradient coloring
+- [x] Text and log panes with automated scrolling
+- [x] Automatic scaling of all elements
+- [x] Vertical and horizontal tile splitting
+- [x] Braille-filled charts
+
 === Dependencies
 
 The link:https://pypi.python.org/pypi/blessed[blessed] library.
