Add truecolor and gradient support
Introduce style inheritance.
Deprecate ANSI colors.

--- a/README.adoc
+++ b/README.adoc
@@ -18,6 +18,8 @@ Features:
 - [x] Automatic scaling of all elements
 - [x] Vertical and horizontal tile splitting
 - [x] Braille-filled charts
+- [x] Theming with 24-bit RGB and HSV colors
+- [x] Color gradients
 
 === Dependencies
 
